# conviction-assistant

./: .dockerignore  .env.example  .gitignore  AI_CHALLENGE.md  CLAUDE.md  Dockerfile  README.md  REVIEW_PLAN.md  REVIEW_PROGRESS.md  alembic.ini  pyproject.toml
.github/workflows/: sync-to-hf.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_resolver_step_kind.py
app/: config.py  errors.py  i18n.py  main.py  models.py
app/agent/: __init__.py  audit.py  dedupe.py  language.py  loop.py  overrides.py  retry_policy.py  rewrite.py  schemas.py  tool_dispatch.py
app/api/: admin.py  auth.py  chat.py  chat_history.py  config.py  conversations.py  deps.py  health.py  schemas.py
app/config/: __init__.py  db.py  settings.py
app/models/: __init__.py  audit.py  base.py  passage.py
app/parser/: __init__.py  cli.py  markdown.py  text.py
app/providers/: __init__.py  _model_prices.json  base.py  factory.py  openai.py  stub.py  text_repair.py
app/repositories/: __init__.py  audit.py  introspection.py  passages.py
app/retrieval/: __init__.py  base.py  bm25.py  registry.py  snippet.py
app/schemas/: __init__.py  ingest.py  passage.py
convictions/: analise_setorial_acoes_brasileiras.md  b3_trading_mechanics.md  bdrs_investing_guide.md  brazilian_equity_valuation_methods.md  cdbs_quick_guide.md  complete_guide_brazilian_derivatives.md  corporate_governance_levels_b3.md  cra_cri_agribusiness_bonds.md  crypto_taxation_brazil.md  currency_exposure_strategies.md  debentures_incentivadas_analysis.md  dividend_aristocrats_brazil.md  esg_ratings_methodologies.md  etfs_brasileiros_guia.md  family_office_structures_brazil.md  fundos_cambiais.md  fundos_imobiliarios_completo.md  fundos_renda_fixa.md  guia_completo_tributacao_investimentos.md  insider_trading_regulations.md  lci_lca_investimentos.md  macroeconomic_factors_brazilian_markets.md  multimercado_fundos_analise_profunda.md  ntnb_titulos_guia.md  pgbl_vgbl_comparacao.md  qualified_foreign_investor_guide.md  real_estate_development_funds.md  small_caps_investment_thesis.md  tesouro_direto_estrategias_avancadas.md  venture_debt_brazil.md
docs/: ARCHITECTURES.md  ASSUMPTIONS.md  DEPLOY.md  DEPLOYMENT.md  INSIGHTS.md  MODEL_CONFIG.md  PRICING.md  QUESTIONS.md  RETRIEVAL_SCALE.md  ROADMAP.md  SCALE_NOTES.md  SCALING.md  TESTING.md  b5-decisions.md  b6-decisions.md  b7-decisions.md  b8-decisions.md
evals/: RAGAS_USAGE.md  README.md  SUMMARY.md  __init__.py  compare.py  dataset.py  golden_set.yaml  metrics.py  report.py  run.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
scripts/: _dump_judge_inputs.py  _dump_traces.py  _judge_summary.py  _passage_length_histogram.py  build_eval_mock.py  demo_agent.py  refresh_prices.py  smoke_openai.py
tests/: conftest.py
(+169 files in other folders)
