[project]
name = "decade-ai-challenge"
version = "0.1.0"
description = "Conversational AI grounded on Decade's investment conviction documents."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "openai>=2.36.0",
    "pyyaml>=6.0.3",
    "bm25s>=0.3.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-pyyaml>=6.0.12.20260508",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends() and Body() are intentional in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Body"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
